# fbs-rs

./: Cargo.toml  README.md
fbs/: Cargo.toml
fbs-build/: Cargo.toml
fbs-build/src/: codegen.rs  macros.rs  main.rs
fbs-build/src/ast/: types.rs
fbs-build/src/ir/: transform.rs  types.rs
fbs-examples/: Cargo.toml  build.rs
fbs-examples/src/greeter/: greeter.rs
fbs-examples/tests/: array.rs  default_value.rs
