[package]
name = "fbs-build"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
description = "A Rust implementation of flatbuffers"
license = "MIT"
repository = "https://github.com/bbqsrc/fbs-rs"
readme = "README.md"
edition = "2018"
keywords = [
    "flatbuffers",
    "flatbuffer",
    "codegen",
    "data",
    "performance",
    "parsing",
    "encoding",
    "encode",
    "decoding",
    "decode",
    "serialization",
    "serialize",
    "deserialization",
    "deserialize",
    "rpc",
    "grpc",
    "service",
]
categories = ["data-structures", "encoding", "parser-implementations"]

[[bin]]
name = "fbs"
path = "src/main.rs"

[dependencies]
# local dependencies
fbs = { path = "../fbs" }

anyhow = "1.0.33"
derive_more = { version = "0.99.11", features = ["from", "as_ref"] }
heck = "0.3.1"
hexf-parse = "0.1.0"
itertools = "0.9.0"
nom = { version = "5.1.2", features = ["regexp"] }
proc-macro2 = "1.0.24"
quote = "1.0.7"
structopt = "0.3.20"
syn = "1.0.46"
typed-builder = "0.6.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
