[package]
name = "fbs-examples"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
description = "Examples of how to use Butte"
license = "MIT"
repository = "https://github.com/bbqsrc/fbs-rs"
edition = "2018"
keywords = ["examples", "flatbuffers", "flatbuffer", "codegen"]

[[bin]]
name = "greeter"
path = "src/greeter/greeter.rs"

[dependencies]
anyhow = "1.0.33"
fbs-build = { path = "../fbs-build" }
fbs = { path = "../fbs" }

[build-dependencies]
anyhow = "1.0.33"
fbs-build = { path = "../fbs-build" }

[dev-dependencies]
anyhow = "1.0.33"
assert_cmd = "1.0.1"
